Aligned hotkey icons and fixed spacing

--- a/src/App.css
+++ b/src/App.css
@@ -41,7 +41,7 @@
   padding-right: 7px;
   height: 35px;
   width: 35px;
-  top: 7px;
+  top: 4px;
 }
 
 .welcome-page {
